Fix z-index on frontend

--- a/packages/block-library/src/blocks/sidecar/style.scss
+++ b/packages/block-library/src/blocks/sidecar/style.scss
@@ -14,6 +14,11 @@
   align-items: start;
 }
 
+.novablocks-content,
+.novablocks-sidebar {
+  z-index: 1;
+}
+
 .novablocks-content {
   
   grid-column: var(--all-columns);
@@ -85,7 +90,7 @@
   height: 100%;
   
   > * {
-    z-index: 1;
+    z-index: 2;
   }
 }
 
